--- a/style.css
+++ b/style.css
@@ -1,29 +1,116 @@
+*
+{
+    box-sizing: border-box;
+}
+html
+{
+    width: 100%;
+    height: 100%;
+}
 body
 {
     background-color: antiquewhite;
-    height: auto;
-    width: auto;
-    position: absolute;
+    height: 100%;
+    width: 100%;
+    margin: 0px;
+    padding: 5px;
+}
+.container
+{
+    display: flex;
+    height: 100%;
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.container-left-part
+{
+    width: 75%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+.hand
+{
+    height: 30%;
+    width: 50%;
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
+}
+.hand-bot
+{
+    height: 30%;
+    width: 50%;
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
 }
 .field
 {
-    margin-left: 10%;
-    margin-right: 10%;
-    margin-top: 20%;
-    margin-bottom: 20%;
     border-width: 5px;
     border-radius: 15px;
     border-color: black;
     border-style: solid;
     padding: 3px;
+    width: 50%;
+    height: 30%;
 }
-.hand
+.card-rock
 {
-    position: relative;
-    bottom: 0px;
-}
-.container
-{
+    background-color: #F3CF71;
+    border-radius: 1px;
+    border-width: 3px;
+    border-color: black;
+    border-style: solid;
     height: 100%;
-    position: relative;
+    flex: 1;
+}
+.card-paper
+{
+    background-color: #F3CF71;
+    border-radius: 1px;
+    border-width: 3px;
+    border-color: black;
+    border-style: solid;
+    height: 100%;
+    flex: 1;
+}
+.card-scissors
+{
+    background-color: #F3CF71;
+    border-radius: 1px;
+    border-width: 3px;
+    border-color: black;
+    border-style: solid;
+    height: 100%;
+    flex: 1;
+}
+.card-undef
+{
+    background-color: #F3CF71;
+    border-radius: 1px;
+    border-width: 3px;
+    border-color: black;
+    border-style: solid;
+    height: 100%;
+    flex: 1;
+}
+.scissors
+{
+
+}
+.paper
+{
+
+}
+.rock
+{
+    
+}
+.menu
+{
+    width: 25%;
 }
