--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 *
 {
     box-sizing: border-box;
+    font-family: 'Roboto Mono', monospace;
 }
 html
 {
@@ -39,6 +40,7 @@ body
     display: flex;
     flex-direction: row;
     gap: 5px;
+    align-items: end;
 }
 .hand-bot
 {
@@ -65,7 +67,7 @@ body
     border-width: 3px;
     border-color: black;
     border-style: solid;
-    height: 100%;
+    height: 90%;
     flex: 1;
     display: flex;
     padding: 5px;
@@ -77,7 +79,7 @@ body
     border-width: 3px;
     border-color: black;
     border-style: solid;
-    height: 100%;
+    height: 90%;
     flex: 1;
     display: flex;
     padding: 5px;
@@ -89,7 +91,7 @@ body
     border-width: 3px;
     border-color: black;
     border-style: solid;
-    height: 100%;
+    height: 90%;
     flex: 1;
     display: flex;
     padding: 5px;
@@ -101,7 +103,7 @@ body
     border-width: 3px;
     border-color: black;
     border-style: solid;
-    height: 100%;
+    height: 90%;
     flex: 1;
     display: flex;
     padding: 5px;
@@ -115,7 +117,7 @@ body
     align-items: center;
     width: 100%;
     height: 100%;
-    font-size: min(10cqw, 10cqh);
+    font-size: min(6cqw, 6cqh);
 }
 .paper
 {
@@ -126,7 +128,7 @@ body
     align-items: center;
     width: 100%;
     height: 100%;
-    font-size: min(10cqw, 10cqh);
+    font-size: min(6cqw, 6cqh);
 }
 .rock
 {
@@ -137,7 +139,7 @@ body
     align-items: center;
     width: 100%;
     height: 100%;
-    font-size: min(10cqw, 10cqh);
+    font-size: min(6cqw, 6cqh);
 }
 .undef
 {
@@ -148,9 +150,20 @@ body
     align-items: center;
     width: 100%;
     height: 100%;
-    font-size: min(10cqw, 10cqh);
+    font-size: min(6cqw, 6cqh);
 }
 .menu
 {
     width: 25%;
+    font-size: 24px;
+}
+.menu-header
+{
+    text-align: center;
+    font-size: 30px;
+    font-weight: bold;
+}
+.listsettings
+{
+    list-style: none;
 }
