--- a/style.css
+++ b/style.css
@@ -237,3 +237,23 @@ body
     50% { background-position: 400% 0; }
     100% { background-position: 0 0; }
 }
+
+.blocker
+{
+    visibility: hidden;
+    pointer-events: none;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    top: 0px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    background-color: gray;
+    opacity: 0.7;
+    z-index: 2;
+    color: coral;
+    font-size: 150px;
+}
