--- a/style.css
+++ b/style.css
@@ -15,19 +15,22 @@ body
     width: 100%;
     margin: 0px;
     padding: 5px;
+    position: relative;
 }
 .container
 {
-    display: flex;
-    height: 100%;
-    width: 100%;
-    flex-direction: row;
-    justify-content: space-between;
+    width: 1140px;
+    margin-right: auto;
+    margin-left: auto;
+}
+.game-wrapper {
+   display: flex; 
 }
 .container-left-part
 {
     width: 75%;
-    height: 100%;
+    margin: 0 auto;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -35,30 +38,40 @@ body
 }
 .hand
 {
-    height: 30%;
-    width: 50%;
+    height: 27vh;
+    width: 90%;
     display: flex;
     flex-direction: row;
     gap: 5px;
     align-items: end;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 .hand-bot
 {
-    height: 30%;
-    width: 50%;
+    height: 27vh;
+    width: 90%;
     display: flex;
     flex-direction: row;
     gap: 5px;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 .field
 {
+    margin: 20px 0 20px 0;
     border-width: 5px;
     border-radius: 15px;
     border-color: black;
     border-style: solid;
     padding: 3px;
-    width: 50%;
-    height: 30%;
+    width: 90%;
+    height: 35vh;
+    display: flex;
+    justify-content: center;
+    padding-left: 4%;
+    padding-right: 4%;
+    gap: 5px;
 }
 .card-rock
 {
@@ -68,9 +81,15 @@ body
     border-color: black;
     border-style: solid;
     height: 100%;
-    flex: 1;
     display: flex;
     padding: 5px;
+}
+.card {
+    transition: all ease 0.5s;
+    width: 18%;
+}
+.card:hover {
+    transform: translateY(-10px);
 }
 .card-paper
 {
@@ -80,9 +99,19 @@ body
     border-color: black;
     border-style: solid;
     height: 100%;
-    flex: 1;
     display: flex;
     padding: 5px;
+}
+.timer {
+    content: "";
+    position: absolute;
+    left: 20px;
+    top: 0;
+    background: #F3CF71;
+    width: 100px;
+    height: 70px;
+    border-bottom-left-radius: 40px;
+    border-bottom-right-radius: 40px;
 }
 .card-scissors
 {
@@ -92,7 +121,6 @@ body
     border-color: black;
     border-style: solid;
     height: 100%;
-    flex: 1;
     display: flex;
     padding: 5px;
 }
@@ -104,7 +132,6 @@ body
     border-color: black;
     border-style: solid;
     height: 100%;
-    flex: 1;
     display: flex;
     padding: 5px;
 }
@@ -154,8 +181,18 @@ body
 }
 .menu
 {
-    width: 25%;
+    position: fixed;
+    right: -405px;
+    top: 0;
+    height: 100%;
+    padding: 20px;
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 30px;
+    border: 2px solid #000;
+    background: #F3CF71;
+    width: 400px;
     font-size: 24px;
+    animation: decreaseWidth 0.5s ease-in-out;
 }
 .menu-header
 {
@@ -184,57 +221,25 @@ body
 
 .button.start {
     width: 100%;
-    height: 5%;
-    font-size: 24px;
+    height: 45px;
+    font-size: 20px;
     border: none;
     outline: none;
     color: #fff;
     background: #111;
     cursor: pointer;
+    border: #000 2px solid;
     position: relative;
     z-index: 0;
     border-radius: 10px;
+    font-size: 1.5vw;
+    transition: all ease 0.5s;
 }
 
-.button.start:before {
-    content: '';
-    background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
-    position: absolute;
-    top: -2px;
-    left:-2px;
-    background-size: 400%;
-    z-index: -1;
-    filter: blur(5px);
-    width: calc(100% + 4px);
-    height: calc(100% + 4px);
-    animation: glowing 20s linear infinite;
-    opacity: 0;
-    transition: opacity .3s ease-in-out;
-    border-radius: 10px;
-}
-
-.button.start:active {
-    color: #000
-}
-
-.button.start:active:after {
+.button.start:hover {
     background: transparent;
-}
-
-.button.start:hover:before {
-    opacity: 1;
-}
-
-.button.start:after {
-    z-index: -1;
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: #111;
-    left: 0;
-    top: 0;
-    border-radius: 10px;
+    color: #000;
+    border: #000 2px solid;
 }
 
 @keyframes glowing {
@@ -264,15 +269,26 @@ body
 
 .time
 {
-    font-size: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 5px;
+
 }
 
 input
 {
-    width: 15%;
-    text-align: right;
+    width: 50px;
+    background: none;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    display: flex;
+    text-align: center;
 }
-
+input:hover {
+    outline: none;
+}
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
     -webkit-appearance: none;
@@ -283,9 +299,10 @@ input::-webkit-inner-spin-button {
 {
     font-size: 44px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
     width: 10%;
+    display: none; /* delete */
 }
 
 .win
@@ -295,4 +312,231 @@ input::-webkit-inner-spin-button {
 .lose
 {
     color: #ff0000;
+}
+
+.placeforbotcard, .placeforplayercard
+{
+    flex: 1;
+    display: flex;
+    width: 100%;
+    height: 100%;
+}
+.spaceforcards
+{
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    font-size: 44px;
+}
+.historyofgame
+{
+    font-size: 1.5vw;
+    border-width: 1px;
+    border-style: solid;
+    border-collapse: collapse;
+    width: 100%;
+}
+.record
+{
+    text-align: center;
+}
+.historyofgame > tbody > tr > td, .historyofgame > tbody > tr > th
+{
+    border-width: 1px;
+    border-style: solid;
+}
+.deletehistory
+{
+    width: 100%;
+    height: 2.5vw;
+    font-size: 1.5vw;
+    text-align: center;
+    border: none;
+    outline: none;
+    color: #fff;
+    background: #111;
+    cursor: pointer;
+    position: relative;
+    z-index: 0;
+    border-radius: 10px;
+}
+.deletehistory:before {
+    content: '';
+    background: linear-gradient(45deg, #808080, #c0c0c0, #202020, #808080);
+    position: absolute;
+    top: -2px;
+    left:-2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowing 20s linear infinite;
+    opacity: 0;
+    transition: opacity .3s ease-in-out;
+    border-radius: 10px;
+}
+.deletehistory:active {
+    color: #000
+}
+.deletehistory:active:after {
+    background: transparent;
+}
+.deletehistory:hover:before {
+    opacity: 1;
+}
+.allrounds
+{
+    height: 30%;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+}
+.win
+{
+    height: 30%;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+}
+.lose
+{
+    height: 30%;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+}
+.blockerformenu
+{
+    visibility: hidden;
+    position: fixed;
+    display: flex;
+    width: 25%;
+    height: 100%;
+    top: 15%;
+    background-color: gray;
+    opacity: 0.7;
+    z-index: 2;
+}
+.backfortime
+{
+    transition: transform 1s ease;
+}
+.fortime
+{
+    display: flex;
+    font-size: 44px;
+    justify-content: center;
+}
+
+/*--- burger-menu ---*/
+
+.burger {
+    z-index: 1488;
+    position: fixed;
+    right: 20px;
+    top: 25px;
+    width: 32px;
+    height: 24px;
+    cursor: pointer;
+}
+
+.burger span {
+    width: 100%;
+    height: 4px;
+    background-color: black;
+    border-radius: 12px;
+    display: block;
+    transition: background-color 0.5s ease-in-out;
+}
+
+.burger span::before,
+.burger span::after {
+    content: "";
+    width: 100%;
+    background-color: black;
+    display: block;
+    transition: all 0.5s ease-in-out;
+    border-radius: 12px;
+    height: 4px;
+}
+@keyframes increaseWidth {
+    0% {
+        right: -405px;
+    }
+    100% {
+        right: 0px;
+    }
+}
+
+@keyframes decreaseWidth {
+    0% {
+      right: 0;
+    }
+    100% {
+      right: -405px;
+    }
+  }
+
+
+.burger span::before {
+    transform: translateY(-10px);
+
+}
+
+.burger span::after {
+    transform: translateY(10px);
+    margin-top: -4px;
+}
+
+.menu_toggle {
+    animation: increaseWidth 0.5s ease-in-out !important;
+    right: 0;
+}
+
+.burger.active span {
+    background-color: transparent;
+}
+
+.burger.active span::before {
+    transform: rotateZ(45deg) translateY(0);
+}
+
+.burger.active span::after {
+    transform: rotateZ(-45deg) translateY(0);
+}
+
+/*--------- Media quaries ---------*/
+/*--------- col -> col-sm -> col-md -> col-lg -> col-xl ---------*/
+
+/*--------- 992 - 1200 ---------*/
+@media screen and (max-width: 1200px) {
+    .container {
+        width: 992px;
+    }
+}
+
+/*--------- 768 - 992 ---------*/
+@media screen and (max-width: 991px) {
+    .container {
+        width: 768px;
+    }
+
+}
+
+/*--------- 576 - 768 ---------*/
+@media screen and (max-width: 767px) {
+    .container {
+        width: 576px;
+    } 
+}
+
+/*--------- 320 - 578 ---------*/
+@media screen and (max-width: 576px) {
+    .container {
+        width: 320px;
+    } 
 }
